deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gluetun-injected-by-annotations
spec:
  selector:
    matchLabels:
      app: alpine
  replicas: 1
  strategy:
   rollingUpdate:
     maxSurge: 1
     maxUnavailable: 0
   type: RollingUpdate
  template:
    metadata:
      labels:
        app: alpine
      annotations:
          vpn/gluetun-inject: "true"       
    spec:
      containers:
      - name: alpine
        image: alpine
        #imagePullPolicy: Alwaysexit
        command: ["/bin/sh", "-c", "sleep 60; while :; do echo $HOSTNAME  `wget -qO- https://ifconfig.me`; sleep 30 ; done"] 
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 2000Mi
